--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <a href="https://wa.me/51978324969" target="_blank"><i class="fab fa-whatsapp"></i></a>
             <a href="https://www.tiktok.com/@maxs.ride3?_t=8qQp6uj41UE&_r=1" target="_blank"><i class="fab fa-tiktok"></i></a>
             <a href="https://www.instagram.com/maxride42/profilecard/?igsh=MW0zM3YyZHFyY2M4Ng==" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href=""><i class="fab fa-youtube"></i></a>
+            <a href="https://www.youtube.com/channel/UCV8dQljP2YCblhETnq54OXw"><i class="fab fa-youtube"></i></a>
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
