--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
     <section id="inicio">
         <h2>Sobre Nosotros</h2>
         <p>Maxs Ride es el mejor lugar para encontrar tu próximo auto. Ofrecemos una variedad de vehículos de alta calidad y un servicio excepcional.</p>
+        <p>Max's Ride</p>
         <p><link rel="stylesheet" href="https://maxs-ride.webnode.pe/"></p>
     </section>
     
@@ -124,6 +125,7 @@
         <ul>
             <li>Financiamiento a medida</li>
             <li>Mantenimiento y reparación</li>
+            3
             <li>Pruebas de manejo</li>
             <li>Garantías extendidas</li>
         </ul>
